--- a/index.html
+++ b/index.html
@@ -1,3 +1,45 @@
+plik1.css
+
+#logo {
+background-color: grey;
+color: blue;
+height: 100px;
+text-align: center;
+font-weight: bold;
+}
+#lewa {
+background-color: yellow;
+float: left;
+width: 20%;
+margin: 2% 0% 2% 0%;
+padding: 2% 0% 2% 0%;
+}
+#srodek {
+background-color: yellow;
+height: 200px;
+text-align: center;
+float: left;
+width: 44%;
+padding: 1% 3% 1% 3%;
+margin: 2% 5% 2% 5%;
+}
+#prawa {
+background-color: yellow;
+height: 100px;
+float: left;
+width: 20%;
+margin: 2% 0% 2% 0%;
+}
+#stopka {
+height: 100px;
+float: none;
+position: relative;
+top: 300px;
+background-color: grey;
+color: black;
+text-align: left;
+}
+
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="plik1.css">
@@ -15,15 +57,15 @@ LOGO
 <div id="srodek">
 <FORM>
 <TABLE>
-<tr><td>Imiê:</td><td><input type=text></td></tr>
+<tr><td>ImiÃª:</td><td><input type=text></td></tr>
 <tr><td>Nazwisko:</td><td><input type=text></td></tr>
-<tr><td>P³eæ:</td><td><input type=radio name="gender" value="female"> kobieta<br><input type=radio name="gender" value="male"> mê¿czyzna</td></tr>
-<tr><td>Nazwisko panieñskie:</td><td><input type=text></td></tr>
+<tr><td>PÂ³eÃ¦:</td><td><input type=radio name="gender" value="female"> kobieta<br><input type=radio name="gender" value="male"> mÃªÂ¿czyzna</td></tr>
+<tr><td>Nazwisko panieÃ±skie:</td><td><input type=text></td></tr>
 <tr><td>Email:</td><td><input type=text></td></tr>
 <tr><td>Kod pocztowy:</td><td><input type=text></td></tr>
 </TABLE>
 </FORM>
-<input type="submit" value="Wyœlij">
+<input type="submit" value="WyÅ“lij">
 </div>
 <div id="prawa">
 <ul>
