--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="plik1.css">
+<link rel="stylesheet" type="text/css" href="/plik1.css">
 </head>
 <body>
 <div id="logo">
